set correct copyright holder and license

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = Mungo-PSGI
 author  = Graham Knop <gknop@omniti.com>
-license = Perl_5
-copyright_holder = Graham Knop
+license = BSD
+copyright_holder = OmniTI Computer Consulting, Inc
 copyright_year   = 2012
 
 [@Filter]
