correct repo/bug tracker urls

--- a/dist.ini
+++ b/dist.ini
@@ -26,8 +26,8 @@ filenames = dist.ini
 filenames = weaver.ini
 
 [MetaResources]
-bugtracker.web    = http://github.com/haarg/Mungo-PSGI/issues
-repository.url    = git://github.com/haarg/Mungo-PSGI.git
-repository.web    = http://github.com/haarg/Mungo-PSGI
+bugtracker.web    = https://github.com/omniti-labs/mungo-PSGI/issues
+repository.url    = git://github.com/omniti-labs/mungo-PSGI.git
+repository.web    = https://github.com/omniti-labs/mungo-PSGI
 repository.type   = git
 
